# BLACKHEAD

./: .editorconfig  .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  buf.gen.yaml  go.work  justfile  package.json  pnpm-workspace.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml  check.yml  integration.yml  native.yml  qemu-ciaos.yml  release.yml
android/: README.md
android/app/: README.md
android/benchmark/: README.md
android/build-logic/: README.md
android/core-ipc/: README.md
android/core-model/: README.md
android/core-security/: README.md
android/data-container/: README.md
android/data-node/: README.md
android/feature-containers/: README.md
android/feature-dashboard/: README.md
android/feature-images/: README.md
android/feature-onboarding/: README.md
android/feature-settings/: README.md
android/feature-telemetry/: README.md
android/feature-terminal/: README.md
api/openapi/: future-control-plane.yaml
ciaos/core-adapter/: README.md
ciaos/interfaces/: README.md
ciaos/qemu/: README.md
cmd/bh-bundle/: Cargo.toml
cmd/bh-probe/: Cargo.toml
cmd/bhctl/: Cargo.toml
cmd/blackheadd/: Cargo.toml
crates/bh-core/: Cargo.toml
crates/bh-crypto/: Cargo.toml
crates/bh-error/: Cargo.toml
crates/bh-ipc/: Cargo.toml
crates/bh-network/: Cargo.toml
crates/bh-policy/: Cargo.toml
future/: README.md
magisk/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh
(+114 files in other folders)
