[workspace]
resolver = "2"
members = [
  "crates/*",
  "cmd/*"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82"
license = "LicenseRef-Proprietary"
authors = ["INDEVSTUDIO Inc."]
repository = "https://github.com/indevstudio-dev/BLACKHEAD"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
